--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://3dfff4dc-27b6-4c0a-9bba-3a41874a8012.preview.emergentagent.com
 WDS_SOCKET_PORT=443
